# httpbin-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh
.github/workflows/: docker-build.yaml  release.yml
notes/: 01_init-repo.md  02_docker.md  03_github-action.md  04_openapi.md  05_impl-http-methods.md  06_impl-auth.md  07_impl-request-inspection.md  08_impl-response-inspection.md  09_impl-response-formats.md  10_impl-dynamic-data.md  11_impl-cookies.md  12_impl-images.md  13_impl-redirects.md  14_impl-anything.md  cargo-watch.md
notes/actix-web/: middleware.md
notes/tokio/: sleep.md
notes/utoipa/: auth.md
src/: anything.rs  auth.rs  dynamic_data.rs  http_methods.rs  main.rs  openapi.rs
