[package]
name = "httpbin-rs"
version = "0.1.0"
edition = "2021"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "使用 Rust 实现 httpbin"
categories = ["web-programming::http-server"]
documentation = "https://docs.rs/httpbin-rs"
repository = "https://github.com/poneding/httpbin-rs"
homepage = "https://github.com/poneding/httpbin-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["httpbin"]

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["default"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
