[package]
name = "httpbin-rs"
version = "0.1.0"
edition = "2024"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "使用 Rust 实现 httpbin"
categories = ["web-programming::http-server"]
documentation = "https://docs.rs/httpbin-rs"
repository = "https://github.com/poneding/httpbin-rs"
homepage = "https://github.com/poneding/httpbin-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["httpbin"]

[dependencies]
axum = "0.8.3"
base64 = "0.22.1"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
